ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/InterfaceDeclarations/parserInterfaceDeclaration6/input.ts.stderr
error: Expected {, got export
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/InterfaceDeclarations/parserInterfaceDeclaration6/input.ts:1:8
  |
1 | export export interface I {
  |        ^^^^^^

